test: Minor improvements to readability and style